fixed bug with phone symbol on mobile

--- a/src/app/header/css/header.component.css
+++ b/src/app/header/css/header.component.css
@@ -41,6 +41,7 @@ a{
     left: 0;
     bottom: 0;
     background: #6A92BB;
+    z-index: 100;
 }
 .panelButtons{
     position: relative;
