--- a/src/app/modal-dialog-window/css/mobile.modal-dialog-window.component.css
+++ b/src/app/modal-dialog-window/css/mobile.modal-dialog-window.component.css
@@ -4,5 +4,6 @@
     }
     .descriptionModalWindow{
         font-size: 12px;
+        line-height: 19px;
     }
 }
